--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="project-info">
                     <h3>Portfolio Website</h3>
                     <p>HTML, CSS, JS</p>
-                    <a href="https://github.com/ShashiBhushan171/Shashi-Portfolio" target="_blank">View Project</a>
+                    <a href="https://shashibhushan171.github.io/Shashi-Portfolio/" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-card">
