--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -107,6 +108,10 @@
                             <img src="./assets/javascript.png" class="skill-icon" alt="JavaScript" />
                             <h4>JavaScript</h4>
                         </div>
+                            <div class="skill-card">
+                            <img src="./assets/React.png" class="skill-icon" alt="React" />
+                            <h4>React</h4>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -167,6 +172,29 @@
                 </div>
             </div>
             <!-- Add more cards if needed -->
+        </div>
+    </section>
+     <!-- -----education----- -->
+
+    <section id="education" class="education">
+        <h2 style="text-align: center;">Education</h2>
+        <div class="edu-container">
+            <div class="edu-item1">
+                <h4>Lovely Professional University</h4>
+                <p>Computer Science and Engineering — CGPA: 7.21</p>
+                <h4>J.J College</h4>
+                <p>12th with Science — Percentage: 70.2%</p>
+                <h4>Uttkramit H S Bitho</h4>
+                <p>10th with Science — Percentage: 79.4%</p>
+            </div>
+            <div class="edu-item2">
+                <h4>Since August 2022</h4>
+                <p>Phagwara, Punjab</p>
+                <h4>2021-2022</h4>
+                <p>Gaya, Bihar</p>
+                <h4>2019-2020</h4>
+                <p>Gaya, Bihar</p>
+            </div>
         </div>
     </section>
 
