--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shashi Bhushan | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- This is a CSS library for icons. It allows you to use icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+    <!-- This is a font. You can use it in CSS like -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"/>
 </head>
 
 <body>
@@ -30,7 +32,7 @@
     <div id="particles-js">
         <section class="hero">
             <div class="hero-left">
-                <h1>Hi,I am <span>Shashi Bhushan,</span> I build responsive & modern Portfolio.</h1>
+                <h1>Hi,I am <span>Shashi Bhushan,</span>turning ideas into interactive</h1>
                 <div class="buttons">
                     <a href="#" class="btn primary">Hire me</a>
                     <a href="./assets/Specialised CV.pdf" class="btn outline" download>Download CV</a>
